# jdk-manager

./: README.md  jdk.ipynb  main.py  pyproject.toml
src/jdk_manager/: cli.py  db.py  download.py  install.py
src/jdk_manager/vendors/: __init__.py  graalvm_community.py  temurin.py  zulu.py
